fix bug with category images on mobile

--- a/content/themes/carbide_probes/assets/scss/_helpers.scss
+++ b/content/themes/carbide_probes/assets/scss/_helpers.scss
@@ -54,7 +54,7 @@
         padding: 0 1em 0 0;
         margin-bottom: 0;
         background: none;
-        width: 25%;
+        width: 100%;
         display: inline-block;
         vertical-align: middle;
       }
